1 Add SPDK_APP macro which is used for SPDK scenario 2 Add new API which SPDK use to call 3 Modify mtcp_create_context don't creat thread when in SPDK scenario

--- a/mtcp/src/Makefile.in
+++ b/mtcp/src/Makefile.in
@@ -5,6 +5,7 @@
 ### TARGET ###
 PS=@PSIO@
 DPDK=@DPDK@
+SPDK=@SPDK@
 ENFORCE_RX_IDLE=@ENFORCE_RX_IDLE@
 NETMAP=@NETMAP@
 ONVM=@ONVM@
@@ -108,6 +109,10 @@ INC += -DENFORCE_RX_IDLE -DRX_IDLE_THRESH=@RX_IDLE_THRESH@
 endif
 else
 INC += -DDISABLE_DPDK
+endif
+
+ifeq ($(SPDK), 1)
+INC += -DSPDK_APP
 endif
 
 ifeq ($(CCP), 1)
