mtcp: dpdk-iface-kmod: fix segment fault with 4.14.x kernel with cross compile
- Need to specify CROSS_COMPILE when build kernel module.
- Fix for 0218ecd12797e4b37a22230f825c3fed47184ef0.

--- a/dpdk-iface-kmod/Makefile
+++ b/dpdk-iface-kmod/Makefile
@@ -28,7 +28,7 @@ else
 endif
 #-------------------------------------------------------------------------#
 all: dpdk_iface.c $(appname) $(appname).c
-	make -C ${RTE_KERNELDIR} M=$(PWD) modules
+	make ARCH=${ARCH} CROSS_COMPILE=${CROSS} -C ${RTE_KERNELDIR} M=$(PWD) modules
 
 $(appname): $(appname).c
 	$(MSG) "  CC $<"
